# variant_changer

./: CMakeLists.txt  README.md  ipc_test_app.c  sw_update.c  variant_changer.c  variant_changer.h
conf/: variant.conf
src/: CMakeLists.txt  dbus_send_receive.c  ipc_test_app.c  sw_update.c  variant_changer.c  variant_changer.h
